# MoE

./: .gitattributes  .gitignore  PLAN.md  README.md  deep-research-report.md  pyproject.toml
analysis/: affinity_evaluation.py  clustering.py  coactivation_matrix.py  cross_layer_mi.py  eamc_baseline.py  jaccard_overlap.py  locality_ratio.py  permutation_null.py  placement_simulator.py  router_entropy.py  traffic_cdf.py
configs/model/: deepseek_v2_lite.yaml  qwen15_moe.yaml
configs/probe/: default.yaml
docs/: OPENI_EXPERIMENT.md
idea-stage/: H4_NOVELTY_CHECK.md  IDEA_CANDIDATES.md  IDEA_REPORT.md  IDEA_REPORT_v2_pipelined_placement.md
refine-logs/: EXPERIMENT_PLAN.md  EXPERIMENT_PLAN_H4.md  EXPERIMENT_RESULTS.md  EXPERIMENT_TRACKER.md
remote/: openi_h4_experiment.py  rsync.sh  setup_env.sh  setup_remote.sh  ssh_helper.py  verify_gpu.sh
research-wiki/: gap_map.md  index.md  log.md  query_pack.md
research-wiki/claims/: C1_traffic_concentration.md  C2_coactivation_cluster.md  C3_cross_layer_mi.md  C4_domain_stability.md
research-wiki/experiments/: exp_m1_deepseek_wikitext.md  exp_m2_deepseek_multidomain.md  exp_m4_qwen_wikitext.md  (+5 more)
scripts/: 00_smoke.py  100_probe_multiturn.py  10_probe_single.py  110_probe_shared_prefix.py  120_h4_sanity.py  130_h4_analyze.py  20_probe_multidomain.py  21_probe_multidomain_mi.py  22_probe_router_entropy.py  30_analyze.py  40_compare_models.py  50_cross_layer_mi.py  60_multidomain_mi.py  70_router_entropy.py  80_permutation_null.py  90_placement_simulator.py  openi_env_check.sh  openi_run_h4.sh  openi_setup_env.sh
(+32 files in other folders)
