[project]
name = "moe-routeweaver-probes"
version = "0.1.0"
description = "Empirical probes for MoE router-induced cross-rank traffic and expert co-activation (motivation for RouteWeaver)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch==2.4.0",
    "transformers==4.46.0",
    "accelerate>=1.0.0",
    "datasets>=3.0.0",
    "huggingface_hub>=0.26.0",
    "sentencepiece>=0.2.0",
    "einops>=0.8.0",
    "hydra-core>=1.3.2",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "numpy>=1.26,<2.2",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
